# OpenGL-Template

./: CMakeLists.txt  build.sh  readME.md
include/glad/: glad.h
src/: glad.c  main.cpp
